--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -41,6 +41,7 @@
       // So I can add commits of my own
       additionalBranchPrefix: "golang/",
       automergeType: "pr",
+      commitMessagePrefix: "[RENOVATE_WILL_AMEND]",
     },
     {
       matchDepNames: ["nix-community/nix-direnv"],
