--- a/.github/workflows/gomod2nix.yml
+++ b/.github/workflows/gomod2nix.yml
@@ -14,7 +14,7 @@ jobs:
     # https://github.com/orgs/community/discussions/39831
     # https://github.com/orgs/community/discussions/54860
     # https://github.com/orgs/community/discussions/26286
-    if: contains(github.event.workflow_run.head_commit.message, '[RENOVATE_WILL_AMEND]')
+    if: startsWith(github.event.head_commit.message, '[RENOVATE_WILL_AMEND]')
     runs-on: ubuntu-latest
     defaults:
       run:
