--- a/.github/labeler.yml
+++ b/.github/labeler.yml
@@ -1,3 +1,3 @@
 automerge:
-  # Something that will always match since we always want to add the label.
-  - base-branch: ".*"
+  - changed-files:
+      - any-glob-to-any-file: "**"
