test subject header

--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -7,6 +7,7 @@
   gomod: {
     pinDigests: true,
   },
+  commitBody: "test",
   postUpdateOptions: ["gomodTidy", "gomodMassage"],
   extends: [
     "config:best-practices",
