--- a/.github/workflows/comment-failures-for-renovate-fixups.yml
+++ b/.github/workflows/comment-failures-for-renovate-fixups.yml
@@ -8,11 +8,20 @@ on:
     branches:
       # SYNC: RENOVATE_FIXUP
       - "renovate/fixup/**"
+permissions:
+  pull-requests: write
 jobs:
   comment-failures-for-renovate-fixups:
     runs-on: ubuntu-latest
     if: ${{ github.event.workflow_run.conclusion == 'failure' }}
     steps:
+      - name: Change title
+        uses: juliangruber/octokit-action@v1
+        with:
+          github-token: ${{ secrets.GITHUB_TOKEN }}
+          command: pulls.update
+          pull_number: ${{ github.event.workflow_run.pull_requests[0].number }}
+          title: Renovate Fixup [failure]
       - name: Comment PR
         uses: thollander/actions-comment-pull-request@v2
         with:
