--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -1,5 +1,8 @@
 {
   $schema: "https://docs.renovatebot.com/renovate-schema.json",
+  // TODO: I shouldn't have to add this, it should automatically do it because I
+  // configured the repository to require branches to be up-to-date.
+  rebaseWhen: "behind-base-branch",
   prCreation: "not-pending",
   nix: {
     enabled: true,
