--- a/.github/renovate.json5
+++ b/.github/renovate.json5
@@ -28,6 +28,7 @@
         "minor",
         "patch",
         "pin",
+        "pinDigest",
         "digest",
         "lockFileMaintenance",
       ],
